CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(COMPONENT_JAVASCRIPT_SUPPORT FALSE CACHE BOOL "Build support for Javascript engine execution")

IF(COMPONENT_JAVASCRIPT_SUPPORT)

	SET(PROJ "javascript")

	CONFIGURE_COMMON(${PROJ})

	FILE(GLOB SRC_FILES "src/*.cpp" "src/*.h")
	IF(WIN32)
		FILE(GLOB SRC_WIN_FILES "src/win/*.cpp" "src/win/*.h" "src/win/*.def")
		SET(SRC_FILES "${SRC_FILES};${SRC_WIN_FILES}")
	ENDIF()

	SET(V8_INCLUDE_DIR "" CACHE PATH "V8 include directory location")
	SET(V8_LIBRARY_DIR "" CACHE PATH "V8 library directory location")

	LINK_DIRECTORIES(${V8_LIBRARY_DIR})

	SCGMS_ADD_LIBRARY(${PROJ} SHARED ${SRC_FILES};${COMMON_FILES})
	CONFIGURE_FILTER_OUTPUT(${PROJ})

	TARGET_LINK_LIBRARIES(${PROJ} scgms v8_monolith)
	TARGET_INCLUDE_DIRECTORIES(${PROJ} PUBLIC "${V8_INCLUDE_DIR}")

ENDIF()
