CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJ "native")

CONFIGURE_COMMON(${PROJ})

FILE(GLOB SRC_FILES "src/*.cpp" "src/*.c" "src/*.h")
IF(WIN32)
	FILE(GLOB SRC_WIN_FILES "src/win/*.cpp" "src/win/*.h" "src/win/*.def")
	SET(SRC_FILES "${SRC_FILES};${SRC_WIN_FILES}")
ENDIF()


SET(NATIVE_UTILS_SRC )
ADD_UTILS_FILE(NATIVE_UTILS_SRC "string_utils.h")
ADD_UTILS_FILE(NATIVE_UTILS_SRC "string_utils.cpp")

SCGMS_ADD_LIBRARY(${PROJ} SHARED ${SRC_FILES};${COMMON_FILES};${NATIVE_UTILS_SRC})
CONFIGURE_FILTER_OUTPUT(${PROJ})

TARGET_LINK_LIBRARIES(${PROJ} scgms)

