CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

SET(PROJ "scgms")
CONFIGURE_COMMON(${PROJ})

FILE(GLOB FACTORY_SRC "src/*.cpp" "src/*.c" "src/*.h")
IF(WIN32)
	FILE(GLOB FACTORY_WIN_SRC "src/win/*.cpp" "src/win/*.def")
	SET(FACTORY_SRC "${FACTORY_SRC};${FACTORY_WIN_SRC}")
ENDIF()

SET(FACTORY_RTL_SRC )

ADD_RTL_FILE(FACTORY_RTL_SRC "Dynamic_Library.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "Dynamic_Library.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "FilesystemLib.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "FilesystemLib.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "rattime.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "rattime.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "referencedImpl.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "referencedImpl.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "DeviceLib.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "DeviceLib.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "UILib.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "UILib.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "FilterLib.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "FilterLib.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "scgmsLib.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "scgmsLib.cpp")
ADD_RTL_FILE(FACTORY_RTL_SRC "SolverLib.h")
ADD_RTL_FILE(FACTORY_RTL_SRC "SolverLib.cpp")

SET(FACTORY_UTILS_SRC )
ADD_UTILS_FILE(FACTORY_UTILS_SRC "winapi_mapping.h")
ADD_UTILS_FILE(FACTORY_UTILS_SRC "winapi_mapping.cpp")
ADD_UTILS_FILE(FACTORY_UTILS_SRC "string_utils.h")
ADD_UTILS_FILE(FACTORY_UTILS_SRC "string_utils.cpp")
ADD_UTILS_FILE(FACTORY_UTILS_SRC "ConvertUTF.h")
ADD_UTILS_FILE(FACTORY_UTILS_SRC "ConvertUTF.cpp")

ADD_LIBRARY(${PROJ} SHARED ${FACTORY_SRC};${COMMON_IFACE_FILES};${COMMON_LANG_FILES};${COMMON_RESOURCE_FILES};${FACTORY_RTL_SRC};${FACTORY_UTILS_SRC})
